project home change

--- a/projects/index.html
+++ b/projects/index.html
@@ -170,7 +170,7 @@ img.emoji {
 <div class="wp-block-group is-layout-flow wp-block-group-is-layout-flow">
 <figure class="wp-block-pullquote"><blockquote>
 <p>Welcome to the other side of the writeups!</p>
-<cite>where we &#8220;realizations&#8221; happen</cite>
+<cite>where &#8220;realizations&#8221; happen</cite>
 </blockquote></figure>
 </div>
 
