--- a/wp-content/uploads/simply-static/temp-files/simply-static-1-1709833313/introduction-to-snns/index.html
+++ b/wp-content/uploads/simply-static/temp-files/simply-static-1-1709833313/introduction-to-snns/index.html
@@ -379,9 +379,7 @@ Bottom-up!
 <script type="text/javascript" src="https://da4kek.github.io/writeups/wp-includes/js/dist/vendor/wp-polyfill.min.js?ver=3.15.0" id="wp-polyfill-js"></script>
 <script type="text/javascript" src="https://da4kek.github.io/writeups/wp-includes/js/dist/hooks.min.js?ver=c6aec9a8d4e5a5d543a1" id="wp-hooks-js"></script>
 <script type="text/javascript" src="https://da4kek.github.io/writeups/wp-includes/js/dist/i18n.min.js?ver=7701b0c3857f914212ef" id="wp-i18n-js"></script>
-<script id="wp-i18n-js-after" type="text/javascript">
-wp.i18n.setLocaleData( { 'text directionltr': [ 'ltr' ] } );
-</script>
+<script id="wp-i18n-js-after" type="text/javascript">wp.i18n.setLocaleData( { 'text directionltr': [ 'ltr' ] } );</script>
 <script type="text/javascript" src="https://da4kek.github.io/writeups/wp-includes/js/dist/url.min.js?ver=8814d23f2d64864d280d" id="wp-url-js"></script>
 <script type="text/javascript" src="https://da4kek.github.io/writeups/wp-includes/js/dist/api-fetch.min.js?ver=0fa4dabf8bf2c7adf21a" id="wp-api-fetch-js"></script>
 <script id="wp-api-fetch-js-after" type="text/javascript">wp.apiFetch.use( wp.apiFetch.createRootURLMiddleware( "https://da4kek.github.io/writeups/wp-json/" ) );
